--- a/5Forex_Uncorr.ipynb
+++ b/5Forex_Uncorr.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "5Forex_Uncorr.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNUPmzatSv2U1vVgnH2cZVr",
+      "authorship_tag": "ABX9TyNYWtp+ioJ0XwyWFByyJt2U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -66,11 +66,11 @@
         "#Select the list of tickers and select the daterange\n",
         "start = datetime(2012, 1, 1)\n",
         "symbols_list = ['EURUSD=X', 'USDJPY=X', 'GBPUSD=X',\"AUDUSD=X\" , 'USDCAD=X', 'USDCHF=X', 'NZDUSD=X', 'EURJPY=X', 'GBPJPY=X', \n",
-        "                'EURGBP=X', 'AUDJPY=X']\n",
+        "                'EURGBP=X', 'AUDJPY=X', \"XAUUSD=X\"]\n",
         "#array to store prices\n",
         "symbols=[]"
       ],
-      "execution_count": 58,
+      "execution_count": 114,
       "outputs": []
     },
     {
@@ -81,7 +81,7 @@
           "height": 312
         },
         "id": "HsL9hozeKfqz",
-        "outputId": "646c1606-a16e-46ee-e127-1c776b736af6"
+        "outputId": "9f1f932c-1545-40b0-e1d8-6d4974c52967"
       },
       "source": [
         "#Pull stock prices, push into clean dataframe\n",
@@ -100,7 +100,7 @@
         "df_pivot=df.pivot('Date','Symbol','Close').reset_index()\n",
         "df_pivot.head()"
       ],
-      "execution_count": 59,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -136,6 +136,7 @@
               "      <th>USDCAD=X</th>\n",
               "      <th>USDCHF=X</th>\n",
               "      <th>USDJPY=X</th>\n",
+              "      <th>XAUUSD=X</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
@@ -153,6 +154,7 @@
               "      <td>1.0209</td>\n",
               "      <td>0.9381</td>\n",
               "      <td>77.019997</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
@@ -168,6 +170,7 @@
               "      <td>1.0174</td>\n",
               "      <td>0.9394</td>\n",
               "      <td>76.930000</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
@@ -183,6 +186,7 @@
               "      <td>1.0111</td>\n",
               "      <td>0.9319</td>\n",
               "      <td>76.722000</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
@@ -198,6 +202,7 @@
               "      <td>1.0134</td>\n",
               "      <td>0.9421</td>\n",
               "      <td>76.709999</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
@@ -213,26 +218,27 @@
               "      <td>1.0196</td>\n",
               "      <td>0.9521</td>\n",
               "      <td>77.151001</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "Symbol       Date   AUDJPY=X  AUDUSD=X  ...  USDCAD=X  USDCHF=X   USDJPY=X\n",
-              "0      2012-01-02  78.419998  1.020804  ...    1.0209    0.9381  77.019997\n",
-              "1      2012-01-03  78.853104  1.025399  ...    1.0174    0.9394  76.930000\n",
-              "2      2012-01-04  79.540001  1.037000  ...    1.0111    0.9319  76.722000\n",
-              "3      2012-01-05  79.290001  1.034126  ...    1.0134    0.9421  76.709999\n",
-              "4      2012-01-06  79.098701  1.025704  ...    1.0196    0.9521  77.151001\n",
+              "Symbol       Date   AUDJPY=X  AUDUSD=X  ...  USDCHF=X   USDJPY=X  XAUUSD=X\n",
+              "0      2012-01-02  78.419998  1.020804  ...    0.9381  77.019997       NaN\n",
+              "1      2012-01-03  78.853104  1.025399  ...    0.9394  76.930000       NaN\n",
+              "2      2012-01-04  79.540001  1.037000  ...    0.9319  76.722000       NaN\n",
+              "3      2012-01-05  79.290001  1.034126  ...    0.9421  76.709999       NaN\n",
+              "4      2012-01-06  79.098701  1.025704  ...    0.9521  77.151001       NaN\n",
               "\n",
-              "[5 rows x 12 columns]"
+              "[5 rows x 13 columns]"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 59
+          "execution_count": 115
         }
       ]
     },
