--- a/5Forex_Uncorr.ipynb
+++ b/5Forex_Uncorr.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "5Forex_Uncorr.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYWtp+ioJ0XwyWFByyJt2U",
+      "authorship_tag": "ABX9TyOEXpaIvxLbsG775AYE+nhF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -931,6 +931,28 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PUppbll0xdnq"
+      },
+      "source": [
+        "#XAUUSD - USDCHF\t-94.1%"
+      ],
+      "execution_count": 116,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "COlQ7Uw3xeyL"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
